add swagger WaterNote get post
